--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,42 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Home_Fragment">
+    android:background="#F8F9FA"
+    tools:context=".HomeFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:cardCornerRadius="10dp"
-            android:layout_margin="15dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#FFFFFF"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
                 >
-                <androidx.cardview.widget.CardView
+                <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     app:cardCornerRadius="10dp"
+                    app:strokeWidth="0dp"
                     >
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="44dp"
-                        android:background="#F8F9FA"
                         android:layout_centerVertical="true"
                         android:src="@drawable/tool_bar"
                         />
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
-                    app:cardCornerRadius="20dp"
+                    app:cardCornerRadius="10dp"
+                    app:strokeWidth="0dp"
                     android:backgroundTint="#F0FF91"
 
                     >
@@ -62,19 +59,18 @@
                             android:layout_marginLeft="30dp"
                             />
 
-                </androidx.cardview.widget.CardView>
+                </com.google.android.material.card.MaterialCardView>
                 <TextView
                     android:id="@+id/your_location_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tournament League"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     android:layout_centerVertical="true"
-                    android:textColor="#707B81"
+                    android:textColor="#1A2530"
                     android:layout_centerHorizontal="true"
-                    android:fontFamily="@font/airbnbcereal_bk"
+                    android:fontFamily="@font/airbnbcereal_md"
                     />
             </RelativeLayout>
-        </androidx.cardview.widget.CardView>
     </ScrollView>
 </FrameLayout>
