Frame Layout added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,128 +10,149 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
+            android:id="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/tool_bar"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginHorizontal="10dp"
-                >
+                android:layout_marginHorizontal="17dp"
+                android:layout_marginTop="20dp">
+
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     app:cardCornerRadius="10dp"
-                    app:strokeWidth="0dp"
-                    >
+                    app:strokeWidth="0dp">
+
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="44dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/tool_bar"
-                        />
+                        android:src="@drawable/tool_bar" />
                 </com.google.android.material.card.MaterialCardView>
+
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:backgroundTint="#F0FF91"
                     app:cardCornerRadius="25dp"
                     app:strokeWidth="0dp"
-                    android:backgroundTint="#F0FF91"
 
                     >
-                        <ImageView
 
-                            android:id="@+id/cart_home_fragment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:src="@drawable/coins"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="@android:dimen/app_icon_size"
-                            />
+                    <ImageView
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:text="100"
-                            android:textStyle="bold"
-                            android:textColor="@color/black"
-                            android:gravity="center"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginLeft="30dp"
-                            />
+                        android:id="@+id/cart_home_fragment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="@android:dimen/app_icon_size"
+                        android:src="@drawable/coins" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center"
+                        android:text="100"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </com.google.android.material.card.MaterialCardView>
+
                 <TextView
                     android:id="@+id/your_location_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tournament League"
-                    android:textSize="14sp"
-                    android:layout_centerVertical="true"
-                    android:textColor="#1A2530"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:fontFamily="@font/airbnbcereal_md"
-                    />
+                    android:text="Tournament League"
+                    android:textColor="#1A2530"
+                    android:textSize="14sp" />
             </RelativeLayout>
-            <androidx.cardview.widget.CardView
+
+            <com.google.android.material.search.SearchBar
+                android:id="@+id/search_bar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                app:cardCornerRadius="30dp"
+                android:layout_height="match_parent"
+                app:iconifiedByDefault="false"
+                android:text="search"
+                app:queryHint="Search"
+                app:searchIcon="@drawable/search1"
+                android:backgroundTint="@color/white"/>
+
+
+            <com.google.android.material.card.MaterialCardView
+                app:cardCornerRadius="20dp"
+                android:layout_width="match_parent"
+                app:layout_constraintDimensionRatio="16:7"
+                android:layout_height="180dp"
                 android:outlineSpotShadowColor="@color/white"
-                android:backgroundTint="#FFFFFF"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="15dp"
-                >
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_bar"
+                android:background="#9C9A9A"
+                android:layout_marginHorizontal="17dp"
+                tools:ignore="MissingConstraints">
+                <com.smarteist.autoimageslider.SliderView
+                    android:id="@+id/image_slider"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:iconifiedByDefault="false"
-                    app:searchIcon="@drawable/search1"
-                    app:queryBackground="@android:color/transparent"
-                    app:queryHint="Search"
+                    app:sliderAnimationDuration="600"
+                    app:sliderAutoCycleDirection="back_and_forth"
+                    app:sliderAutoCycleEnabled="true"
+                    app:sliderIndicatorAnimationDuration="600"
+                    app:sliderIndicatorGravity="center_horizontal|bottom"
+                    app:sliderIndicatorMargin="15dp"
+                    app:sliderIndicatorOrientation="horizontal"
+                    app:sliderIndicatorPadding="3dp"
+                    app:sliderIndicatorRadius="2dp"
+                    app:sliderScrollTimeInSec="5"
+                    app:sliderStartAutoCycle="true"
                     />
-            </androidx.cardview.widget.CardView>
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/round_all"
-                android:backgroundTint="@color/white"
-                android:layout_marginTop="10dp"
-                >
-                <com.google.android.material.card.MaterialCardView
-                    app:cardCornerRadius="20dp"
-                    android:layout_width="match_parent"
-                    app:layout_constraintDimensionRatio="16:7"
-                    android:layout_height="0dp"
-                    android:outlineSpotShadowColor="@color/white"
-                    android:background="#9C9A9A"
-                    tools:ignore="MissingConstraints">
+            </com.google.android.material.card.MaterialCardView>
 
-                    <
-                        android:id="@+id/image_slider"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:sliderAnimationDuration="600"
-                        app:sliderAutoCycleDirection="back_and_forth"
-                        app:sliderAutoCycleEnabled="true"
-                        app:sliderIndicatorAnimationDuration="600"
-                        app:sliderIndicatorGravity="center_horizontal|bottom"
-                        app:sliderIndicatorMargin="15dp"
-                        app:sliderIndicatorOrientation="horizontal"
-                        app:sliderIndicatorPadding="3dp"
-                        app:sliderIndicatorRadius="2dp"
-                        app:sliderScrollTimeInSec="5"
-                        app:sliderStartAutoCycle="true" />
-                </com.google.android.material.card.MaterialCardView>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="17dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Popular Tournament"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="See All"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textColor="#135CDC"
+                    />
+
+            </RelativeLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="17dp"/>
+
+
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
