--- a/app/src/main/res/layout/desing_popular_tournament.xml
+++ b/app/src/main/res/layout/desing_popular_tournament.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:layout_marginHorizontal="10dp"
+    android:layout_marginHorizontal="20dp"
     android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="20dp">
+    app:strokeWidth="0dp"
+    app:cardCornerRadius="10dp">
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
 
-       <androidx.cardview.widget.CardView
+       <ImageView
+           android:id="@+id/image"
            android:layout_width="130dp"
-           android:layout_height="match_parent"
-           app:cardCornerRadius="20dp"
-
-           >
-           <ImageView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:src="@drawable/bgmi"/>
-       </androidx.cardview.widget.CardView>
-
+           android:layout_height="130dp"
+           />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
-
            <TextView
+               android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BGMI TOURNAMENT"
@@ -41,6 +36,7 @@
                />
 
            <TextView
+               android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="solo/squad"
@@ -48,14 +44,7 @@
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                />
-
-
-
-
-
        </RelativeLayout>
-
-
    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
