--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#F8F9FA"
     android:orientation="vertical"
-    tools:context=".RegistrationActivity">
+    tools:context=".Activity.RegistrationActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
