--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
                 android:text="Hello Again!"
                 android:fontFamily="@font/airbnbcereal_md"
                 android:textSize="28sp"
-                android:textColor="#1A2530"
+                android:textColor="@color/text_color_black"
                 android:layout_gravity="center"
                 android:layout_marginTop="80dp"
                 />
@@ -34,7 +34,7 @@
                 android:text="Welcome Back You’ve Been Missed!"
                 android:textSize="16sp"
                 android:fontFamily="@font/airbnbcereal_bk"
-                android:textColor="#707B81"
+                android:textColor="@color/text_color_grey"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 />
@@ -46,7 +46,7 @@
                 android:layout_marginLeft="20dp"
                 android:fontFamily="@font/airbnbcereal_md"
                 android:textSize="16sp"
-                android:textColor="#1A2530"
+                android:textColor="@color/text_color_black"
                 android:layout_marginTop="40dp"
                 />
             <com.google.android.material.card.MaterialCardView
@@ -77,8 +77,8 @@
                         android:minHeight="52dp"
                         android:background="@color/white"
                         android:hint="example@xyz.com"
-                        android:textColor="#1A2530"
-                        android:textColorHint="#707B81"
+                        android:textColor="@color/text_color_black"
+                        android:textColorHint="@color/text_color_grey"
                         android:textSize="14sp"
                         android:fontFamily="@font/airbnbcereal_bk"
                         android:textColorHighlight="#5B9EE1" />
@@ -91,7 +91,7 @@
                 android:text="Password"
                 android:layout_marginLeft="20dp"
                 android:textSize="16sp"
-                android:textColor="#1A2530"
+                android:textColor="@color/text_color_black"
                 android:layout_marginTop="20dp"
                 />
             <com.google.android.material.card.MaterialCardView
@@ -125,8 +125,8 @@
                         android:hint="Enter your password"
                         android:background="@color/white"
                         android:textSize="14sp"
-                        android:textColor="#1A2530"
-                        android:textColorHint="#707B81"
+                        android:textColor="@color/text_color_black"
+                        android:textColorHint="@color/text_color_grey"
                         android:fontFamily="@font/airbnbcereal_bk"
                         android:inputType="textPassword"
                         android:textColorHighlight="#5B9EE1"
@@ -143,13 +143,13 @@
                 android:textSize="13sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                android:textColor="#707B81"
+                android:textColor="@color/blue_text"
                 />
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:backgroundTint="#5B9EE1"
+                android:backgroundTint="@color/blue_button"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 app:cardCornerRadius="10dp"
@@ -166,6 +166,7 @@
                     />
             </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/loginGuest"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="20dp"
@@ -177,11 +178,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sign in with Google"
+                    android:text="Login as Guest"
                     android:fontFamily="@font/airbnbcereal_md"
                     android:textSize="18sp"
                     android:layout_gravity="center"
-                    android:textColor="#707B81"
+                    android:textColor="@color/text_color_grey"
                     />
             </com.google.android.material.card.MaterialCardView>
             <LinearLayout
@@ -195,7 +196,7 @@
                     android:layout_height="wrap_content"
                     android:text="Don't have account?"
                     android:textSize="12dp"
-                    android:textColor="#707B81"
+                    android:textColor="@color/text_color_grey"
                     android:fontFamily="@font/poppins_semibold"
                     />
                 <TextView
@@ -205,7 +206,7 @@
                     android:text="Register for free"
                     android:textSize="12dp"
                     android:layout_marginLeft="5dp"
-                    android:textColor="#5B9EE1"
+                    android:textColor="@color/blue_text"
                     android:fontFamily="@font/poppins_semibold"
                     />
             </LinearLayout>
