--- a/app/src/main/res/layout/desing_popular_tournament.xml
+++ b/app/src/main/res/layout/desing_popular_tournament.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:layout_marginHorizontal="20dp"
     android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:strokeWidth="0dp"
-    app:cardCornerRadius="10dp">
+    android:layout_marginHorizontal="20dp"
+    app:cardCornerRadius="20dp">
 
    <LinearLayout
        android:layout_width="match_parent"
@@ -18,6 +18,8 @@
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
+           android:scaleType="centerCrop"
+           android:src="@drawable/bgmi"
            />
        <RelativeLayout
            android:layout_width="match_parent"
