--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F8F9FA"
+    android:background="@color/background_color"
     tools:context=".Fragment.HomeFragment">
 
     <ScrollView
@@ -21,19 +21,24 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="10dp"
                 >
+
                 <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/drawerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginEnd="3dp"
+                    android:layout_marginBottom="3dp"
                     app:cardCornerRadius="10dp"
-                    app:strokeWidth="0dp"
-                    >
+                    android:backgroundTint="@color/background_color"
+                    app:strokeWidth="0dp">
+
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="44dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/tool_bar"
-                        />
+                        android:src="@drawable/tool_bar" />
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
@@ -127,6 +132,7 @@
                         app:sliderIndicatorGravity="center_horizontal|bottom"
                         app:sliderIndicatorMargin="15dp"
                         app:sliderIndicatorOrientation="horizontal"
+                        android:background="@color/black"
                         app:sliderIndicatorPadding="3dp"
                         app:sliderIndicatorRadius="2dp"
                         app:sliderScrollTimeInSec="5"
@@ -141,4 +147,6 @@
                 />
         </LinearLayout>
     </ScrollView>
+
+
 </FrameLayout>
