--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -6,12 +6,12 @@
         android:title="Home"
         />
     <item
-        android:id="@+id/favourite"
+        android:id="@+id/recentMatch"
         android:icon="@drawable/profile"
         android:title="Favourite"
         />
     <item
-        android:id="@+id/cart"
+        android:id="@+id/notification"
         android:icon="@drawable/profile"
         android:title="Profile"
         />
