--- a/app/src/main/res/layout/desing_popular_tournament.xml
+++ b/app/src/main/res/layout/desing_popular_tournament.xml
@@ -6,6 +6,7 @@
     android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:strokeWidth="0dp"
+    android:background="@color/white"
     android:layout_marginHorizontal="20dp"
     app:cardCornerRadius="20dp">
 
@@ -31,6 +32,8 @@
                android:text="BGMI TOURNAMENT"
                android:textStyle="bold"
                android:textSize="20dp"
+               android:fontFamily="@font/airbnbcereal_bk"
+               android:textColor="@color/text_color_black"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
@@ -42,6 +45,8 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="solo/squad"
+               android:fontFamily="@font/airbnbcereal_md"
+               android:textColor="@color/text_color_black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
