--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="60dp" />
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         app:cardElevation="15dp"
         app:strokeWidth="0dp"
@@ -30,7 +30,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavBar"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             app:menu="@menu/main_navigation"
             app:itemIconTint="@color/bottom_nav_color"
             android:background="@drawable/top_round_corner"
@@ -118,6 +118,7 @@
                         />
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/profile_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
