--- a/app/src/main/res/layout/activity_tournament_list.xml
+++ b/app/src/main/res/layout/activity_tournament_list.xml
@@ -69,7 +69,7 @@
             android:text="Tournaments"
             android:textSize="14sp"
             android:layout_centerVertical="true"
-            android:textColor="#1A2530"
+            android:textColor="@color/text_color_black"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/airbnbcereal_md"
             />
