--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,7 +65,7 @@
                             android:layout_height="40dp"
                             android:text="100"
                             android:textStyle="bold"
-                            android:textColor="@color/black"
+                            android:textColor="@color/text_color_black"
                             android:gravity="center"
                             android:layout_marginRight="10dp"
                             android:layout_marginLeft="30dp"
@@ -79,7 +79,7 @@
                     android:text="Tournament League"
                     android:textSize="14sp"
                     android:layout_centerVertical="true"
-                    android:textColor="#1A2530"
+                    android:textColor="@color/text_color_black"
                     android:layout_centerHorizontal="true"
                     android:fontFamily="@font/airbnbcereal_md"
                     />
