--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="blue_button">#5B9EE1</color>
     <color name="blue_text">#5B9EE1</color>
     <color name="background_color">#F8F9FA</color>
+    <color name="light_blue_background_color">#DFEFFF</color>
+    <color name="green_background_color">#72E877</color>
+    <color name="border_color_grey">#E9EDEF</color>
 </resources>
