--- a/app/src/main/res/layout/design_tournament_list.xml
+++ b/app/src/main/res/layout/design_tournament_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="20dp"
     android:layout_marginVertical="5dp"
@@ -12,19 +12,21 @@
         android:layout_height="match_parent"
         >
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="15dp"
             app:cardCornerRadius="5dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="12dp"
             app:strokeWidth="0dp"
             android:backgroundTint="@color/light_blue_background_color"
             >
             <TextView
+                android:id="@+id/dateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3:00 PM 10/10/23"
                 android:textSize="10sp"
+                android:layout_marginHorizontal="5dp"
                 android:fontFamily="@font/airbnbcereal_bk"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
@@ -33,7 +35,7 @@
         <RelativeLayout
             android:layout_width="145dp"
             android:layout_height="40dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"
             >
             <TextView
@@ -59,6 +61,7 @@
                     android:gravity="center"
                     >
                     <TextView
+                        android:id="@+id/totalPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="160"
@@ -93,6 +96,7 @@
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
             <TextView
+                android:id="@+id/remainingEntries"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
@@ -109,6 +113,7 @@
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
             <TextView
+                android:id="@+id/maxEntries"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="25"
@@ -122,12 +127,13 @@
             android:layout_height="15dp"
             app:strokeWidth="0dp"
             app:cardCornerRadius="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="15dp"
             android:backgroundTint="@color/blue_button"
             android:layout_alignParentEnd="true"
             >
             <TextView
+                android:id="@+id/gameType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Squad"
@@ -164,6 +170,7 @@
                 android:backgroundTint="@color/green_background_color"
                 >
                 <TextView
+                    android:id="@+id/entryFee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Free"
