--- a/app/src/main/res/layout/desing_popular_tournament.xml
+++ b/app/src/main/res/layout/desing_popular_tournament.xml
@@ -41,7 +41,7 @@
                />
 
            <TextView
-               android:id="@+id/desc"
+               android:id="@+id/gameType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="solo/squad"
