--- a/app/src/main/res/drawable/recentmatch.xml
+++ b/app/src/main/res/drawable/recentmatch.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M9,10.5L11,12.5L15.5,8M20,21V7.8C20,6.12 20,5.28 19.673,4.638C19.385,4.074 18.927,3.615 18.362,3.327C17.72,3 16.88,3 15.2,3H8.8C7.12,3 6.28,3 5.638,3.327C5.074,3.615 4.615,4.074 4.327,4.638C4,5.28 4,6.12 4,7.8V21L6.75,19L9.25,21L12,19L14.75,21L17.25,19L20,21Z"
+      android:pathData="M22.7,13.5L20.701,11.5L18.7,13.5M21,12C21,16.971 16.971,21 12,21C7.029,21 3,16.971 3,12C3,7.029 7.029,3 12,3C15.302,3 18.188,4.778 19.754,7.429M12,7V12L15,14"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
