--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/loginActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +8,7 @@
     android:orientation="vertical"
     android:background="#F8F9FA"
     android:layout_height="match_parent"
-    tools:context=".Activity.LoginActivity">
+    tools:context=".Activity.LoginAndRegistration.LoginActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -56,7 +57,7 @@
                 app:cardCornerRadius="10dp"
                 app:strokeWidth="0dp"
                 android:layout_marginTop="10dp"
-                app:cardBackgroundColor="@color/white"
+                android:backgroundTint="@color/white"
                 android:outlineSpotShadowColor="@color/white"
                 >
                 <com.google.android.material.textfield.TextInputLayout
@@ -100,6 +101,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
                 app:strokeWidth="0dp"
+                android:backgroundTint="@color/white"
                 android:outlineSpotShadowColor="@color/white"
                 app:cardCornerRadius="10dp"
                 >
