--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,42 +10,45 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity">
     <RelativeLayout
+        android:id="@+id/mainScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="true"
         >
-    <FrameLayout
-        android:id="@+id/fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="60dp" />
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        app:cardElevation="15dp"
-        app:strokeWidth="0dp"
-        app:cardCornerRadius="0dp"
-        android:backgroundTint="@color/background_color"
-        >
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavBar"
+        <FrameLayout
+            android:id="@+id/fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:menu="@menu/main_navigation"
-            app:itemIconTint="@color/bottom_nav_color"
-            android:background="@drawable/top_round_corner"
-            app:labelVisibilityMode="unlabeled"
-            app:itemActiveIndicatorStyle="@color/bottom_nav_color"
-            />
-    </com.google.android.material.card.MaterialCardView>
-    </RelativeLayout>
-        <com.google.android.material.navigation.NavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:layout_marginRight="20dp"
-            android:backgroundTint="@color/white"
+            android:layout_marginBottom="60dp" />
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:cardElevation="15dp"
+            app:strokeWidth="0dp"
+            app:cardCornerRadius="0dp"
+            android:backgroundTint="@color/background_color"
             >
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavBar"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                app:menu="@menu/main_navigation"
+                app:itemIconTint="@color/bottom_nav_color"
+                android:background="@drawable/top_round_corner"
+                app:labelVisibilityMode="unlabeled"
+                app:itemActiveIndicatorStyle="@color/bottom_nav_color"
+                />
+        </com.google.android.material.card.MaterialCardView>
+    </RelativeLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginRight="20dp"
+        android:layout_gravity="start"
+        android:backgroundTint="@color/white"
+        >
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -150,6 +153,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
+                        android:layout_marginLeft="3dp"
                         android:src="@drawable/userplus"
                         />
                     <TextView
@@ -172,14 +176,37 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/profile"
+                        android:src="@drawable/detail"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         android:layout_marginLeft="15dp"
-                        android:text="Profile"
+                        android:text="Game Detail"
+                        android:textColor="@color/text_color_black"
+                        android:fontFamily="@font/airbnbcereal_bk"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_vertical"
+                    >
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/about"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:layout_marginLeft="15dp"
+                        android:text="About"
                         android:textColor="@color/text_color_black"
                         android:fontFamily="@font/airbnbcereal_bk"
                         />
@@ -194,14 +221,14 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/profile"
+                        android:src="@drawable/support"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         android:layout_marginLeft="15dp"
-                        android:text="Profile"
+                        android:text="Help &amp; Support"
                         android:textColor="@color/text_color_black"
                         android:fontFamily="@font/airbnbcereal_bk"
                         />
@@ -214,7 +241,6 @@
                 android:background="#2D3B48"
                 android:layout_marginLeft="20dp"
                 />
-
             <LinearLayout
                 android:id="@+id/signOut"
                 android:layout_width="wrap_content"
@@ -224,12 +250,10 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="40dp"
                 android:gravity="center_vertical">
-
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/signout" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -240,5 +264,5 @@
                     android:textSize="16sp" />
             </LinearLayout>
         </RelativeLayout>
-        </com.google.android.material.navigation.NavigationView>
+    </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
