--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         >
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/backButton"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_margin="20dp"
@@ -125,6 +126,43 @@
             android:layout_height="wrap_content"
             android:text="Friends"
             android:layout_toRightOf="@id/icon1"
+            android:textSize="16sp"
+            android:fontFamily="@font/airbnbcereal_bk"
+            android:textColor="@color/text_color_black"
+            android:layout_centerVertical="true"
+            />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrowrightgrey"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            />
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@color/border_color_grey"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="20dp"
+        >
+        <ImageView
+            android:id="@+id/icon6"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:src="@drawable/detail"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Game detail"
+            android:layout_toRightOf="@id/icon6"
             android:textSize="16sp"
             android:fontFamily="@font/airbnbcereal_bk"
             android:textColor="@color/text_color_black"
