--- a/app/src/main/res/layout/design_tournament_list.xml
+++ b/app/src/main/res/layout/design_tournament_list.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3:00 PM 10/10/23"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:layout_marginHorizontal="5dp"
                 android:fontFamily="@font/airbnbcereal_bk"
                 android:textColor="@color/black"
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total Prize : "
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textColor="@color/text_color_grey"
                 android:fontFamily="@font/airbnbcereal_bk"
                 android:layout_centerVertical="true"
@@ -65,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="160"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textColor="@color/text_color_black"
                         android:fontFamily="@font/airbnbcereal_md"
                         />
@@ -73,7 +73,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" Rs"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textColor="@color/text_color_black"
                         android:fontFamily="@font/airbnbcereal_md"
                         />
@@ -81,7 +81,7 @@
             </com.google.android.material.card.MaterialCardView>
         </RelativeLayout>
         <LinearLayout
-            android:layout_width="110dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:gravity="center_vertical"
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Remaining Entry: "
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/text_color_grey"
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
@@ -100,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/text_color_black"
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/text_color_black"
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
@@ -117,14 +117,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="25"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/text_color_black"
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
         </LinearLayout>
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="50dp"
-            android:layout_height="15dp"
+            android:layout_width="70dp"
+            android:layout_height="20dp"
             app:strokeWidth="0dp"
             app:cardCornerRadius="5dp"
             android:layout_marginTop="10dp"
@@ -137,19 +137,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Squad"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
                 android:fontFamily="@font/airbnbcereal_md"
                 />
         </com.google.android.material.card.MaterialCardView>
         <LinearLayout
-            android:layout_width="70dp"
-            android:layout_height="50dp"
+            android:layout_width="90dp"
+            android:layout_height="65dp"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="15dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:orientation="vertical"
             android:gravity="center_horizontal"
             >
@@ -157,24 +157,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Entry Fee : "
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@color/text_color_grey"
                 android:fontFamily="@font/airbnbcereal_bk"
                 />
             <com.google.android.material.card.MaterialCardView
-                android:layout_width="70dp"
-                android:layout_height="30dp"
-                app:cardCornerRadius="5dp"
+                android:layout_width="90dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="10dp"
                 android:layout_marginTop="5dp"
                 app:strokeWidth="0dp"
-                android:backgroundTint="@color/green_background_color"
+                app:cardBackgroundColor="@color/green_background_color"
                 >
                 <TextView
                     android:id="@+id/entryFee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Free"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     android:textColor="@color/white"
                     android:layout_gravity="center"
                     android:fontFamily="@font/airbnbcereal_md"
