--- a/app/src/main/res/layout/desing_popular_tournament.xml
+++ b/app/src/main/res/layout/desing_popular_tournament.xml
@@ -6,7 +6,7 @@
     android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:strokeWidth="0dp"
-    android:background="@color/white"
+    android:backgroundTint="@color/white"
     android:layout_marginHorizontal="20dp"
     app:cardCornerRadius="20dp">
 
