--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -7,13 +7,13 @@
         />
     <item
         android:id="@+id/recentMatch"
-        android:icon="@drawable/profile"
-        android:title="Favourite"
+        android:icon="@drawable/recentmatch"
+        android:title="Recent Match"
         />
     <item
         android:id="@+id/notification"
-        android:icon="@drawable/profile"
-        android:title="Profile"
+        android:icon="@drawable/notification"
+        android:title="Notification"
         />
 
 </menu>
