--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.TournamentLeague" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/your_status_bar_color</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
