many new changes have been done like bottomsheet dialog is added and inviting member is add but many more work is remaining. and many changes have been done in TournamentViewActivity

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
                         android:src="@drawable/tool_bar" />
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/myCoins"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
